tests/machine/x/cobol/len_string.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LEN_STRING.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       PROCEDURE DIVISION.
       PERFORM LEN USING "mochi"
       DISPLAY LEN_RES
       STOP RUN.
